--- a/index.html
+++ b/index.html
@@ -12,157 +12,183 @@
 
 <body>
   <!-- webpage title -->
-  <section class="hero is-primary">
-    <div class="hero-body">
-      <p class="title">
+  <section class="hero is-info is-medium">
+    <div class="hero-body has-text-centered ">
+      <p class="title is-size-1">
         USA Covidometer
       </p>
       <p class="subtitle">
-        By Catie, Jason, Tom
+        By Catie, Jason, & Tom
       </p>
     </div>
   </section>
+
+
   <!-- Row of dropdown menus buttons -->
-  <div class="select">
-    <select id="categorySelect">
-      <option value="" disabled selected>Select what kind of COVID Data to view</option>
-      <option value="cases">Total Cases</option>
-      <option value="deaths">Total Deaths</option>
-      <option value="newCases">New Cases</option>
-      <option value="newDeaths">New Deaths</option>
-    </select>
+  <div class="container is-fluid pt-4 pb-4">
+    <div class="notification has-background-info-light">
+
+      <!-- covid variables (deaths, positivity rate, vaccination rate, hospitilization/icu capacity, etc etc) -->
+      <div class="select is-rounded">
+        <select id="categorySelect">
+          <option value="" disabled selected>Select what kind of COVID Data to view</option>
+          <option value="cases">Total Cases</option>
+          <option value="deaths">Total Deaths</option>
+          <option value="newCases">New Cases</option>
+          <option value="newDeaths">New Deaths</option>
+        </select>
+      </div>
+
+      <!-- State 1 -->
+      <div class="select is-rounded">
+        <select id="stateSelect">
+          <option value="" disabled selected>Select a State from the list below to filter results by state</option>
+          <option value="AK">Arkansas</option>
+          <option value="AL">Alabama</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Conneticut</option>
+          <option value="DE">Delaware</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="HI">Hawaii</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisana</option>
+          <option value="ME">Maine</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakoda</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VA">Vermont</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
+        </select>
+      </div>
+
+      <!-- State 2 -->
+      <div class="select is-rounded">
+        <select id="stateSelectSecond">
+          <option value="" disabled selected>Select a second State from the list below to compare results with the first
+            state</option>
+          <option value="AK">Arkansas</option>
+          <option value="AL">Alabama</option>
+          <option value="AZ">Arizona</option>
+          <option value="AR">Arkansas</option>
+          <option value="CA">California</option>
+          <option value="CO">Colorado</option>
+          <option value="CT">Conneticut</option>
+          <option value="DE">Delaware</option>
+          <option value="FL">Florida</option>
+          <option value="GA">Georgia</option>
+          <option value="HI">Hawaii</option>
+          <option value="IL">Illinois</option>
+          <option value="IN">Indiana</option>
+          <option value="IA">Iowa</option>
+          <option value="KS">Kansas</option>
+          <option value="KY">Kentucky</option>
+          <option value="LA">Louisana</option>
+          <option value="ME">Maine</option>
+          <option value="MD">Maryland</option>
+          <option value="MA">Massachusetts</option>
+          <option value="MI">Michigan</option>
+          <option value="MN">Minnesota</option>
+          <option value="MS">Mississippi</option>
+          <option value="MO">Missouri</option>
+          <option value="MT">Montana</option>
+          <option value="NE">Nebraska</option>
+          <option value="NV">Nevada</option>
+          <option value="NH">New Hampshire</option>
+          <option value="NJ">New Jersey</option>
+          <option value="NM">New Mexico</option>
+          <option value="NY">New York</option>
+          <option value="NC">North Carolina</option>
+          <option value="ND">North Dakota</option>
+          <option value="OH">Ohio</option>
+          <option value="OK">Oklahoma</option>
+          <option value="OR">Oregon</option>
+          <option value="PA">Pennsylvania</option>
+          <option value="RI">Rhode Island</option>
+          <option value="SC">South Carolina</option>
+          <option value="SD">South Dakoda</option>
+          <option value="TN">Tennessee</option>
+          <option value="TX">Texas</option>
+          <option value="UT">Utah</option>
+          <option value="VA">Vermont</option>
+          <option value="WA">Washington</option>
+          <option value="WV">West Virginia</option>
+          <option value="WI">Wisconsin</option>
+          <option value="WY">Wyoming</option>
+        </select>
+
+      </div>
+
+      <!-- Timeframe (year/month/week/today) -->
+      <div class="select is-rounded">
+        <select id="timeFrame">
+          <option value="" disabled selected>Select a time frame of Covid Data to review</option>
+          <option value="30">Last Month</option>
+          <option value="182">Last 6 Months</option>
+          <option value="365">Last Year</option>
+          <option value="alltime">All Time</option>
+        </select>
+      </div>
+
+      <!-- submit button -->
+      <button class="button is-danger is-rounded" id="submitBtn">Submit</button>
+    </div>
   </div>
 
-  <div class="select">
-    <select id="stateSelect">
-      <option value="" disabled selected>Select a State from the list below to filter results by state</option>
-      <option value="AK">Arkansas</option>
-      <option value="AL">Alabama</option>
-      <option value="AZ">Arizona</option>
-      <option value="AR">Arkansas</option>
-      <option value="CA">California</option>
-      <option value="CO">Colorado</option>
-      <option value="CT">Conneticut</option>
-      <option value="DE">Delaware</option>
-      <option value="FL">Florida</option>
-      <option value="GA">Georgia</option>
-      <option value="HI">Hawaii</option>
-      <option value="IL">Illinois</option>
-      <option value="IN">Indiana</option>
-      <option value="IA">Iowa</option>
-      <option value="KS">Kansas</option>
-      <option value="KY">Kentucky</option>
-      <option value="LA">Louisana</option>
-      <option value="ME">Maine</option>
-      <option value="MD">Maryland</option>
-      <option value="MA">Massachusetts</option>
-      <option value="MI">Michigan</option>
-      <option value="MN">Minnesota</option>
-      <option value="MS">Mississippi</option>
-      <option value="MO">Missouri</option>
-      <option value="MT">Montana</option>
-      <option value="NE">Nebraska</option>
-      <option value="NV">Nevada</option>
-      <option value="NH">New Hampshire</option>
-      <option value="NJ">New Jersey</option>
-      <option value="NM">New Mexico</option>
-      <option value="NY">New York</option>
-      <option value="NC">North Carolina</option>
-      <option value="ND">North Dakota</option>
-      <option value="OH">Ohio</option>
-      <option value="OK">Oklahoma</option>
-      <option value="OR">Oregon</option>
-      <option value="PA">Pennsylvania</option>
-      <option value="RI">Rhode Island</option>
-      <option value="SC">South Carolina</option>
-      <option value="SD">South Dakoda</option>
-      <option value="TN">Tennessee</option>
-      <option value="TX">Texas</option>
-      <option value="UT">Utah</option>
-      <option value="VA">Vermont</option>
-      <option value="WA">Washington</option>
-      <option value="WV">West Virginia</option>
-      <option value="WI">Wisconsin</option>
-      <option value="WY">Wyoming</option>
-    </select>
-  </div>
 
-  <div class="select">
-    <select id="stateSelectSecond">
-      <option value="" disabled selected>Select a second State from the list below to compare results with the first
-        state</option>
-      <option value="AK">Arkansas</option>
-      <option value="AL">Alabama</option>
-      <option value="AZ">Arizona</option>
-      <option value="AR">Arkansas</option>
-      <option value="CA">California</option>
-      <option value="CO">Colorado</option>
-      <option value="CT">Conneticut</option>
-      <option value="DE">Delaware</option>
-      <option value="FL">Florida</option>
-      <option value="GA">Georgia</option>
-      <option value="HI">Hawaii</option>
-      <option value="IL">Illinois</option>
-      <option value="IN">Indiana</option>
-      <option value="IA">Iowa</option>
-      <option value="KS">Kansas</option>
-      <option value="KY">Kentucky</option>
-      <option value="LA">Louisana</option>
-      <option value="ME">Maine</option>
-      <option value="MD">Maryland</option>
-      <option value="MA">Massachusetts</option>
-      <option value="MI">Michigan</option>
-      <option value="MN">Minnesota</option>
-      <option value="MS">Mississippi</option>
-      <option value="MO">Missouri</option>
-      <option value="MT">Montana</option>
-      <option value="NE">Nebraska</option>
-      <option value="NV">Nevada</option>
-      <option value="NH">New Hampshire</option>
-      <option value="NJ">New Jersey</option>
-      <option value="NM">New Mexico</option>
-      <option value="NY">New York</option>
-      <option value="NC">North Carolina</option>
-      <option value="ND">North Dakota</option>
-      <option value="OH">Ohio</option>
-      <option value="OK">Oklahoma</option>
-      <option value="OR">Oregon</option>
-      <option value="PA">Pennsylvania</option>
-      <option value="RI">Rhode Island</option>
-      <option value="SC">South Carolina</option>
-      <option value="SD">South Dakoda</option>
-      <option value="TN">Tennessee</option>
-      <option value="TX">Texas</option>
-      <option value="UT">Utah</option>
-      <option value="VA">Vermont</option>
-      <option value="WA">Washington</option>
-      <option value="WV">West Virginia</option>
-      <option value="WI">Wisconsin</option>
-      <option value="WY">Wyoming</option>
-    </select>
-  </div>
 
-  <div class="select">
-    <select id="timeFrame">
-      <option value="" disabled selected>Select a time frame of Covid Data to review</option>
-      <option value="30">Last Month</option>
-      <option value="182">Last 6 Months</option>
-      <option value="365">Last Year</option>
-      <option value="alldata">All Time</option>
-    </select>
-  </div>
 
-  <button class="button" id="submitBtn">Submit</button>
 
   <!-- Graph -->
   <div id="graph"></div>
   <canvas id="myChart"></canvas>
-  <!-- footer -->
+
   <!-- link chart.js here? -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- link javascript -->
   <script src="./assets/script.js"></script>
+
+  <!-- footer -->
+  <footer class="footer ">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Covidometer</strong> by Jason Burke, Thomas Frohm, & Catie O'Connor.
+      </p>
+    </div>
+  </footer>
 </body>
 
 
-</html
+</html>
